--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="header"><h1 class="title">DEMO DRAG AND DROG</h1></div>
+  <div class="header"><h1 class="title">DEMO DRAG AND DROP</h1></div>
   <div class="add-item">
     <button mat-raised-button class="btn-add" (click)="openDialog()">ADD ITEM</button>
   </div>
